--- a/index.css
+++ b/index.css
@@ -4,7 +4,27 @@
 
 body {
     font-family:'Courier New', Courier, monospace;
-    background-color: burlywood;
+    /* background-color: #b15433; */
+    background-image: url(brick.avif);
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    color: white;
+    font-weight: normal;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.3);
+    letter-spacing: .15em;
+}
+
+/* Container holding the image and the text */
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
 }
 
 .established {
@@ -12,15 +32,30 @@ body {
     text-align: center;
 }
 
+.header {
+    width: 80%;
+    height: 200px;
+    object-fit: cover;
+    will-change: opacity;
+    box-shadow: 0px 0px 10px 4px grey;
+}
+
 .menu {
     background-color:rgb(255, 255, 255);
     margin-left: auto;
     margin-right: auto;
+    margin-top: 20px;
     width: 80%;
     max-width: 600px;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px grey;
+    padding: 20px 40px;
+    border-radius: 2px;
+    border: 4px solid black;
+    border-style: double;
+    box-shadow: 0px 0px 10px 4px grey;
+}
+
+.menu-text * {
+    margin: 10px auto;
 }
 
 img {
@@ -30,13 +65,12 @@ img {
 }
 
 h1 {
-    color: brown;
-    font-size: 30px;
-    margin-top: 10px;
+    color: #ae5631;
+    font-size: 36px;
 }
 
 h3, p, li {
-    color: rgb(73, 137, 186)
+    color: rgb(73, 137, 186);
 }
 
 ul {
