--- a/index.css
+++ b/index.css
@@ -3,9 +3,11 @@
 }
 
 body {
-    font-family:'Courier New', Courier, monospace;
-    /* background-color: #b15433; */
+    font-family:monospace;
     background-image: url(brick.avif);
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
 .centered {
@@ -42,8 +44,6 @@ body {
 
 .menu {
     background-color:rgb(255, 255, 255);
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 20px;
     width: 80%;
     max-width: 600px;
@@ -51,11 +51,12 @@ body {
     border-radius: 2px;
     border: 4px solid black;
     border-style: double;
-    box-shadow: 0px 0px 10px 4px grey;
+    display: inline-block;
 }
 
 .menu-text * {
     margin: 10px auto;
+    text-align: left;
 }
 
 img {
@@ -83,6 +84,6 @@ li {
 }
   
 li:before {
-    content: "◦";
+    content: "○";
     padding-right: 5px;
 }
