--- a/index.css
+++ b/index.css
@@ -45,9 +45,10 @@ body {
 .menu {
     background-color:rgb(255, 255, 255);
     margin-top: 20px;
+    margin-bottom: 20px;
     width: 80%;
     max-width: 600px;
-    padding: 20px 40px;
+    padding: 20px 0 20px 30px;
     border-radius: 2px;
     border: 4px solid black;
     border-style: double;
@@ -67,10 +68,10 @@ img {
 
 h1 {
     color: #ae5631;
-    font-size: 36px;
+    font-size: 22px;
 }
 
-h3, p, li {
+h3, p, li, tr {
     color: rgb(73, 137, 186);
 }
 
