--- a/index.css
+++ b/index.css
@@ -44,15 +44,14 @@ body {
 
 .menu {
     background-color:rgb(255, 255, 255);
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px auto;
     width: 80%;
     max-width: 600px;
-    padding: 20px 0 20px 30px;
+    padding: 30px;
     border-radius: 2px;
     border: 4px solid black;
     border-style: double;
-    display: inline-block;
+    box-shadow: 5px 5px 10px grey;
 }
 
 .menu-text * {
@@ -87,4 +86,17 @@ li {
 li:before {
     content: "○";
     padding-right: 5px;
+}
+
+/* unvisited link */
+a:link {
+    color: rgb(73, 137, 186);
+}
+/* visited link and mouse over*/
+a:visited, a:hover {
+    color: rgb(0, 60, 150);
+}
+/* selected link */
+a:active {
+    color: rgb(166, 188, 204);
 }
