--- a/index.css
+++ b/index.css
@@ -69,13 +69,15 @@ img {
 h1 {
     color: #ae5631;
     font-size: 22px;
-}
-
-h1 {
     margin-top: 20px;
 }
 
-h3, p, li, tr {
+h2 {
+    font-style: italic;
+    font-size: 18px;
+}
+
+h3, h2, p, li, tr {
     color: rgb(73, 137, 186);
 }
 
