--- a/index.css
+++ b/index.css
@@ -37,8 +37,8 @@ body {
 }
 
 .menu {
-    background-color:rgb(255, 255, 255);
-    margin: 20px auto;
+    background-color: white;
+    margin: 20px auto 0;
     max-width: 700px;
     padding: 30px;
     border-radius: 2px;
@@ -51,13 +51,40 @@ body {
     text-align: left;
 }
 
-.drink-text h3 {
+.menu-text h3 {
     margin-bottom: 0;
 }
 
-.drink-text p {
+.menu-text p {
     margin-top: 0;
     margin-bottom: 10px;
+}
+
+.add-ons p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.add-ons h1 {
+    font-size: 18px;
+    margin-top: 0;
+}
+
+.h3-margin h3 {
+    margin-top: 10px;
+}
+
+.grid-p p {
+    margin-bottom: 5px;
+}
+
+.drink-grids article {
+    display: grid;
+    grid-template-columns: 80% 20%
+}
+
+.drink-grids article h3:nth-child(2) {
+    text-align: right;
 }
 
 img {
@@ -70,11 +97,17 @@ h1 {
     color: #ae5631;
     font-size: 22px;
     margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 h2 {
     font-style: italic;
     font-size: 18px;
+    margin: 0 auto 5px;
+}
+
+h3 {
+    margin-top: 0;
 }
 
 h3, h2, p, li, tr {
@@ -83,6 +116,7 @@ h3, h2, p, li, tr {
 
 ul {
     list-style: none;
+    margin: 0;
 }
   
 li {
