--- a/index.css
+++ b/index.css
@@ -26,35 +26,34 @@ body {
     position: relative;
     text-align: center;
     color: white;
+    background-color: #333;
 }
 
 .header {
-    height: 200px;
+    height: 150px;
     width: 100%;
     object-fit: cover;
     will-change: opacity;
-    box-shadow: 0px 0px 10px 4px grey;
+    opacity: .8;
 }
 
 .menu {
     background-color: white;
-    margin: 20px auto 0;
+    margin: 20px 10px 0 10px;
     max-width: 700px;
-    padding: 30px;
+    padding: 20px;
     border-radius: 2px;
     border: 4px solid black;
     border-style: double;
-    box-shadow: 5px 5px 10px grey;
+    box-shadow: 1px 0px 10px grey;
 }
 
 .menu-text * {
     text-align: left;
 }
-
 .menu-text h3 {
     margin-bottom: 0;
 }
-
 .menu-text p {
     margin-top: 0;
     margin-bottom: 10px;
@@ -64,7 +63,6 @@ body {
     margin-top: 0;
     margin-bottom: 0;
 }
-
 .add-ons h1 {
     font-size: 18px;
     margin-top: 0;
@@ -82,9 +80,31 @@ body {
     display: grid;
     grid-template-columns: 80% 20%
 }
-
 .drink-grids article h3:nth-child(2) {
     text-align: right;
+}
+
+/*nav bar*/
+.nav-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #fff;
+}
+.nav-bar li {
+    float: left;
+}
+.nav-bar li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.icon-bar {
+    background-color: #454A56
 }
 
 img {
@@ -114,17 +134,15 @@ h3, h2, p, li, tr {
     color: rgb(73, 137, 186);
 }
 
-ul {
+ul:not(.nav-bar *) {
     list-style: none;
     margin: 0;
 }
-  
-li {
+li:not(.nav-bar *) {
     padding-left: 1em;
     text-indent: -1em;
 }
-  
-li:before {
+li:not(.nav-bar *)::before {
     content: "○";
     padding-right: 5px;
 }
