--- a/index.css
+++ b/index.css
@@ -39,8 +39,8 @@ body {
 
 .menu {
     background-color: white;
-    margin: 20px 10px 0 10px;
-    max-width: 700px;
+    margin: 20px auto 0;
+    max-width: 600px;
     padding: 20px;
     border-radius: 2px;
     border: 4px solid black;
