--- a/index.css
+++ b/index.css
@@ -85,6 +85,15 @@ body {
 }
 
 /*nav bar*/
+.nav-bar {
+    /* sticky */
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    border-bottom: 1px solid grey;
+    z-index: 999;
+    box-shadow: 1px 0px 10px grey;
+}
 .nav-bar ul {
     list-style-type: none;
     margin: 0;
